--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.brahma.oschina.view.widgets.RippleIntroView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.brahma.oschina.view.activities.MainActivity"
-    android:id="@+id/layout_ripple"
-    android:background="#AA000000"
-    android:focusable="true"
-    >
-    <ImageView
-        android:id="@+id/iv_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="6dp"
-        android:layout_marginTop="36dp"
-        android:contentDescription="@null"
-        android:src="@mipmap/ic_add"
-       />
+    tools:context="com.brahma.oschina.view.activities.MainActivity">
 
-    <ImageView
-        android:id="@+id/iv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/iv_plus"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="50dp"
-        android:contentDescription="@null"
-        android:src="@mipmap/tips_subscribe"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</com.brahma.oschina.view.widgets.RippleIntroView>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <fragment
+            android:id="@+id/frag_nav"
+            android:name="com.brahma.oschina.view.fragments.NavFragment"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            tools:layout="@layout/fragment_nav" />
+    </LinearLayout>
+
+    <com.brahma.oschina.view.widgets.RippleIntroView
+        android:id="@+id/layout_ripple"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#AA000000"
+        android:focusable="true"
+        android:visibility="invisible">
+
+        <ImageView
+            android:id="@+id/iv_plus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="6dp"
+            android:layout_marginTop="36dp"
+            android:contentDescription="@null"
+            android:src="@mipmap/ic_add" />
+
+        <ImageView
+            android:id="@+id/iv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/iv_plus"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="50dp"
+            android:contentDescription="@null"
+            android:src="@mipmap/tips_subscribe" />
+
+    </com.brahma.oschina.view.widgets.RippleIntroView>
+</FrameLayout>
