完成用户信息页面，类太阳系动画

--- a/app/src/main/res/layout/layout_frag_title.xml
+++ b/app/src/main/res/layout/layout_frag_title.xml
@@ -25,7 +25,7 @@
         android:layout_margin="2dp"
         android:padding="6dp"
         android:clickable="true"
-        android:background="@drawable/ic_search_bg"
+        android:background="@drawable/ic_title_bar_icon_bg"
         android:src="@mipmap/btn_search_normal"
         />
 </RelativeLayout>
